fixed container and hero spacings

--- a/public/styles/_reset.css
+++ b/public/styles/_reset.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -26,18 +21,21 @@ time, mark, audio, video {
 	text-decoration: none;
 	box-shadow: none;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 /* native mobile fields reset */
-textarea, input[type=text], input[type=range], input, input:matches([type=password], [type=search]) {  
+textarea, input[type=text], input[type=range],
+input, input:matches([type=password], [type=search]) {  
     -webkit-appearance: none;
     -moz-appearance: none;
 	appearance: none;
 }
-/* HTML5 display-role reset for older browsers
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-*/
+
 body {
 	line-height: 1;
 }
