--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -15,7 +15,7 @@ a:hover {
   font-size: 0.88rem;
   text-decoration: none !important;
   text-align: center;
-  padding: 0.9rem 1.6rem;
+  padding: 0.8rem 1.5rem;
   cursor: pointer;
 } .btn:hover {
     text-decoration: none;
