--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,68 +1,75 @@
+@media screen and (min-width: 700px) {
+  :root {
+    font-size: 16px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   :root {
-    font-size: 14px;
+    font-size: 13px;
   }
 
-  /* Nav */
-  .wrap {
-    padding: 0 2em;
-  }
-  #header {
-    padding: 0 1.5em;
-  }
-  
-  #header nav .desktop {
-    display: none;
-  }
+.mb {
+  display: none;
+}
 
-  .container {
+
+#header nav .desktop {
+  display: none;
+}
+
+.container {
+  overflow: hidden;
+}
+
+
+#hero {
+  height: inherit;
+  flex-wrap: wrap;
+  background-size: 40em;
+}
+  #hero .container {
     overflow: hidden;
+    padding-bottom: 0;
   }
-  #hero {
-    height: inherit;
-    flex-wrap: wrap;
-    background-size: 40em;
-    &.container {
-      overflow: hidden;
-      padding-bottom: 0;
-    }
-    h4 {
-      margin-top: 1.3em;
-    }
-    .sign-up {
-      max-width: 100%;
-      margin-bottom: 0;
-    }
-    .hero-img {
-      width: 100%;
-    }
-    .flex {
-      max-width: 100%;
-      padding-top: 8%;
-    }
-    .flex-2 {
-      margin-left: 0;
-    }
-    .hero-img {
-      margin-bottom: 1.7em;
-      width: 15em !important;
-    }
+  #hero h4 {
+    margin-top: 1.3em;
   }
-  #how-it-works,
-  #faq {
-    background-size: 200%;
-    h2 {
-      text-align: left;
-    }
+  #hero .sign-up {
+    max-width: 100%;
+    margin-bottom: 0;
   }
+  #hero .hero-img {
+    width: 5em;
+  }
+  #hero .flex {
+    max-width: 100%;
+    padding-top: 8%;
+  }
+  #hero .flex-2 {
+    margin-left: 0;
+  }
+  #hero .hero-img {
+    margin-bottom: 1.7em;
+  }
+}
 
-  #modal-footer {
-    padding: 1em 0 1em 0;
-  }
 
-  @media screen and (max-width: 320px) {
-    :root {
-      font-size: 11px;
-    }
+#how-it-works,
+#faq {
+  background-size: 200%;
+}
+#how-it-works h2, #faq h2 {
+  text-align: left;
+}
+
+
+#modal-footer {
+  padding: 1em 0 1em 0;
+}
+
+@media screen and (max-width: 320px) {
+  :root {
+    font-size: 11px;
   }
 }
