--- a/public/styles/typography.css
+++ b/public/styles/typography.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 h3 {
-  font-size: 0.8em;
+  font-size: 0.85em;
   color: var(--color-fg);
   margin-bottom: 0.6em;
 }
